@@ -1,3 +1,6 @@
+- drakbug:
+  o exceptions with "\n" are considered normal ways to quit and thus
+    do not fire up drakbug (eg: #32292)
 - diskdrake:
   o restore progress bar when formatting ext3
 
